# openff-recharge

./: .codecov.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .lgtm.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  lint.yaml
devtools/: README.md
devtools/conda-envs/: docs-env.yaml  test-env.yaml  test-psi4.yaml  test-torch.yaml  test_env.yaml  test_env_rdkit.yaml  test_env_rdkit_and_openeye.yaml
docs/: Makefile  README.md  conf.py  getting_started.rst  index.md  index.rst  make.bat  references.bib  releasehistory.md
docs/getting-started/: cli.md  installation.md  quick-start.md
docs/users/: resp.md  theory.md
examples/parameter-training/numpy/: train-bcc-parameters.py
examples/parameter-training/pyro/: train-parameters.py
examples/parameter-training/pytorch/: train-parameters.py
examples/qc-data-generation/: generate-psi4.py
examples/resp-charges/: train-resp-charges.py
openff/recharge/: __init__.py  _annotations.py  _pydantic.py  _version.py  smirnoff_with_vsite.offxml  tip4.offxml
openff/recharge/_tests/: conftest.py  qce_optim.xyz
openff/recharge/aromaticity/: __init__.py  _aromaticity.py  aromaticity.py
regression-tests/resp-charges/: compare-respyte-charges.py  generate-respyte-charges.py
scripts/: run_new_test.py  run_test.py  vsite_fit.ipynb
scripts/convert-am1-bcc/: am1bcc.csv  convert.py  convert_bccs_to_offxml.py  generate_original_am1bcc.py  openeye-am1-bcc.json  openeye-am1-bcc.offxml
scripts/pytorch/: generate_esp.py  optimize.py
scripts/validation/: validate-nci.py  validate.py  validation-set.smi
scripts/virtual-sites/: pyridine.py  run_new_test.py  run_test.py  tip4.offxml
(+116 files in other folders)
